<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".Detail_Live_Page" >

		<LinearLayout 
            android:id="@+id/widget3"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
            
            <TextView android:id="@+id/sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
            
            <TextView android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
            
            <TextView android:id="@+id/competition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>
        
		<LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
            
            <TextView android:id="@+id/latitude"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
            
            <TextView android:id="@+id/longitude"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>
		        
    	<LinearLayout 
            android:id="@+id/widget4"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
            
            <TextView android:id="@+id/equipe1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center" 
                android:layout_gravity="center"
                android:textSize="25sp"
                android:text="@string/nom"/>
            
            <TextView android:id="@+id/score1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center" 
                android:layout_gravity="center"
                android:textSize="25sp"
                android:text="@string/nom"/>
            
            <ImageButton
                android:id="@+id/e1plus1"
                android:background="#fff000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/plus"
                android:src="@drawable/plus" />
            
            <ImageButton android:id="@+id/e1moins1"
                android:background="#fff000"
                android:contentDescription="@string/moins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_weight="0"
                android:src="@drawable/moins"/>
       	</LinearLayout>
       	
    	<LinearLayout android:id="@+id/widget5"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
    	    
    	    <ImageView android:id="@+id/vs"
    	        android:contentDescription="@string/vs"
    	        android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/vs"/>

    	</LinearLayout>
    	
    	<LinearLayout 
            android:id="@+id/widget6"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
            
            <TextView android:id="@+id/equipe2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textSize="25sp"
                android:gravity="center" 
                android:layout_gravity="center"
                android:text="@string/nom"/>
            
            <TextView android:id="@+id/score2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/nom" />
            
            <ImageButton android:id="@+id/e2plus1"
                android:background="#fff000"
                android:contentDescription="@string/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_weight="0"
                android:gravity="center"
                android:src="@drawable/plus" />
            
            <ImageButton android:id="@+id/e2moins1"
                android:background="#fff000"
                android:contentDescription="@string/moins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_weight="0"
                android:gravity="center"
                android:src="@drawable/moins"/>
       	</LinearLayout>
       	
    	<TextView android:id="@+id/shortDes"
    	    android:layout_width="match_parent"
        	android:layout_height="wrap_content"/>
    	
    	<TextView android:id="@+id/longDes"
    	    android:layout_width="match_parent"
        	android:layout_height="wrap_content"/>
    	
    	<LinearLayout 
            android:id="@+id/widget8"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
            
            <TextView android:id="@+id/commentateur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/commentateur"/>
            
            <TextView android:id="@+id/nomCommen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left" />
       	</LinearLayout>  
       	
     	<LinearLayout 
            android:id="@+id/widget9"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
            
            <EditText android:id="@+id/commentaire"
                android:hint="@string/commentaire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="left"/>
            
            <Button android:id="@+id/commenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/commenter" />
            
       	</LinearLayout>   		 
       	
     	<LinearLayout 
            android:id="@+id/widget10"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical">
            
    		<ListView
        		android:id="@+id/comentaires"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content" />
    	</LinearLayout>

    
</LinearLayout>